--- a/hevort/bed.cfg
+++ b/hevort/bed.cfg
@@ -6,6 +6,9 @@
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
 restart_method: command
 
+# import heater
+[include bed_heater.cfg]
+
 [stepper_z]
 step_pin: zboard:P2.2
 dir_pin: zboard:P2.6
@@ -117,14 +120,3 @@ horizontal_move_z: 20
 #   more points than steppers then you will likely have a fixed
 #   minimum value for the range of probed points which you can learn
 #   by observing command output.
-
-[heater_bed]
-heater_pin: zboard:P2.3
-sensor_type: EPCOS 100K B57560G104F
-sensor_pin: zboard:P0.25
-control = pid
-pid_kp = 65.863
-pid_ki = 0.900
-pid_kd = 1205.302
-min_temp: 10
-max_temp: 130
