--- a/hevort/bed.cfg
+++ b/hevort/bed.cfg
@@ -6,68 +6,9 @@
 serial: /dev/serial/by-id/usb-Klipper_lpc1769_04B0001722813AAFC2386A5CC22000F5-if00
 restart_method: command
 
+# import euclid
+[include euclid.cfg]
 # import stepper
 [include bed_stepper.cfg]
 # import heater
 [include bed_heater.cfg]
-
-
-#__________________________ BLTouch ______________________________
-[bltouch]
-sensor_pin: ^zboard:P0.10	# ^ = Activate pullup resistor to avoid floating input
-control_pin: zboard:P2.0		# ! = Active low
-x_offset: -32
-y_offset: -2
-z_offset: 0.650
-stow_on_each_sample: False
-speed: 5
-samples: 5
-sample_retract_dist: 1
-samples_result: median
-
-[homing_override]
-axes: z
-set_position_z: 0
-gcode:
-   G90
-   G1 Z10 F600
-   G28 X
-   G28 Y
-   G1 X150 Y150 F18000
-   G28 Z
-   G1 Z10 F600
-   G1 X0 Y-10 F18000
-
-[bed_mesh]
-speed: 300
-mesh_min: 15,15
-mesh_max: 460,460
-probe_count: 6,6
-fade_start: 1.0
-fade_end: 4.0
-horizontal_move_z: 5
-
-#__________________ SELF LEVELLING (Z_Tilt) _______________________
-[z_tilt]
-z_positions: 
-  -26.87,-20.4
-  274.339,557.81
-  575.548,-20.4
-
-points:
-	40,15
-	255,525
-	525,15
-speed: 200
-horizontal_move_z: 20
-
-#retries: 0
-#   Number of times to retry if the probed points aren't within
-#   tolerance.
-#retry_tolerance: 0
-#   If retries are enabled then retry if largest and smallest probed
-#   points differ more than retry_tolerance. Note the smallest unit of
-#   change here would be a single step. However if you are probing
-#   more points than steppers then you will likely have a fixed
-#   minimum value for the range of probed points which you can learn
-#   by observing command output.
