--- a/moonraker.conf
+++ b/moonraker.conf
@@ -2,9 +2,11 @@
 host: 0.0.0.0
 port: 7125
 enable_debug_logging: True
+klippy_uds_address: /tmp/klippy_uds
+
+[file_manager]
 config_path: ~/klipper_config
 log_path: ~/klipper_logs
-klippy_uds_address: /tmp/klippy_uds
 
 [authorization]
 trusted_clients:
